[metadata]
name = intent
version = 0.1.0
description = Support for the intent formal language
long_description = file: README.md
long_description_content_type = text/markdown
author = Daniel Hardman
author_email = daniel.hardman@gmail.com
license = Apache-2.0
license_files = LICENSE

[options]
packages = find:
include_package_data = true

[options.entry_points]
console_scripts =
    i = scripts.i:main

[coverage:run]
branch = True

[coverage:report]
show_missing = True

[coverage:html]
directory = coverage_html_report

[tool:pytest]
testpaths = tests